--- a/style.css
+++ b/style.css
@@ -1563,21 +1563,44 @@ h1.logo {
     display: block;
     width: 100%;
     height: auto;
+    position: relative;
+}
+
+.about-us-slide.slick-slide {
+    height: 600px;
 }
 
 .about-us-slide img {
     display: block;
     width: 100%;
     height: auto;
+    min-width: 100%;
+    min-height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
     border: 0px solid transparent;
 }
 
-.slide_image {
+.about-us-slider .slide-image {
     z-index: 2;
+    /*display: none;*/
 }
 
-.slide_image_hover {
+.about-us-slider .slide-image_hover {
     z-index: 1;
+}
+
+.slide-mask {
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    /*background: rgba(0, 0, 0, 0);*/
+    background: transparent;
+    z-index: 2;
 }
 
 .about-us-slider-arrows {
