--- a/style.css
+++ b/style.css
@@ -1576,9 +1576,12 @@ h1.logo {
     height: auto;
     min-width: 100%;
     min-height: 100%;
+    margin: auto;
     position: absolute;
     top: 0;
     left: 0;
+    bottom: 0;
+    right: 0;
     border: 0px solid transparent;
 }
 
