--- a/style.css
+++ b/style.css
@@ -201,7 +201,11 @@ section {
 }
 
 h1 {
-
+    font-family: "Muller", Arial, Verdana, sans-serif;
+    font-size: 50px;
+    line-height: 50px;
+    font-weight: bold;
+    color: #e8c97e;
 }
 
 
@@ -426,10 +430,6 @@ a:active {
     z-index: 2;
 }
 
-.popup-head {
-
-}
-
 .popup-head h2 {
     display: inline-block;
     vertical-align: top;
@@ -571,7 +571,6 @@ a:active {
 .input-box .col-2 {
     width: 9%;
     text-align: center;
-    /*outline: 1px solid green;*/
 }
 
 .input-box h3 {
@@ -583,7 +582,6 @@ a:active {
     font-weight: normal;
     font-style: italic;
     color: #ffffff;
-    /*outline: 1px solid red;*/
     text-align: center;
     text-transform: none;
     letter-spacing: none;
@@ -619,16 +617,6 @@ a:active {
     border-radius: 50%;
     text-align: center;
 }
-
-/*.cheked:after {
-    display: block;
-    content: "\2713";
-    font-family: "Muller", Arial, Verdana, sans-serif;
-    font-size: 20px;
-    line-height: 26px;
-    font-weight: normal;
-    color: #ffffff;
-}*/
 
 .send-btn-box {
     text-align: center;
@@ -751,9 +739,6 @@ a:active {
 }
 
 .header {
-/*    background-image: url(img/promo_bg.png);
-    background-size: cover;
-    background-position: center;*/
     padding: 50px 0 245px 0;
     position: relative;
 }
@@ -1011,16 +996,12 @@ a:active {
 
 .respmenubtn:hover span {
     border: 1px solid #e8c97f;
-    /*background: rgba(76, 216, 76, 1);*/
-    /*background: rgba(232, 201, 127, 1);*/
     border: 1px solid rgba(232, 201, 127, 1);
 }
 
 .respmenubtn-active span {
     width: 54px !important;
     border: 1px solid #e8c97f;
-    /*background: rgba(76, 216, 76, 1);*/
-    /*background: rgba(232, 201, 127, 1);*/
     border: 1px solid rgba(232, 201, 127, 1);
 }
 
@@ -1054,7 +1035,6 @@ a:active {
 /* ----- Responsive Nav Menu ------ */
 
 .main-nav-resp-box {
-    /*display: block;*/
     display: none;
     width: 100%;
     height: 100%;
@@ -1107,29 +1087,10 @@ a:active {
     vertical-align: top;
 }
 
-/*.col-1 {
-    width: 13%;
-}*/
-
 .col-2 {
-    /*width: 74%;*/
     color: 100%;
     text-align: center;
 }
-
-/*.col-3 {
-    width: 13%;
-}*/
-
-/*.callback-btn-box {
-    display: inline-block;
-    vertical-align: top;
-    position: fixed;
-    top: 50%;
-    left: -95px;
-    margin: -28px 0 0 0;
-    z-index: 40;
-}*/
 
 .fixed-row {
     display: block;
@@ -1137,7 +1098,6 @@ a:active {
     height: 0;
     position: fixed;
     z-index: 20;
-    /*outline: 1px solid red;*/
 }
 
 .fixed-row .main-row {
@@ -1150,25 +1110,17 @@ a:active {
     width: auto;
     position: fixed;
     top: 50%;
-    /*right: 30px;*/
-    /*right: 157px;*/
     right: 100px;
     z-index: 20;
     margin: -94px 0 0 0;
     padding: 0;
-    /*outline: 1px solid green;*/
 }
-
-/*.logo-block .callback-btn {*/
-
 
 .callback-btn.fixed {
     display: inline-block;
     vertical-align: top;
     position: fixed;
     top: 50%;
-    /*left: -90px;*/
-    /*left: 40px;*/
     left: -30px;
     margin: 10px 0 0 0;
     padding: 12px 5px;
@@ -1242,7 +1194,6 @@ a:active {
 h1.logo {
     display: inline-block;
     vertical-align: top;
-    /*padding: 25px 0;*/
     font-family: "Muller", Arial, Verdana, sans-serif;
     font-size: 222px;
     line-height: 222px;
@@ -1258,7 +1209,6 @@ h1.logo {
 }
 
 .logo-col h2 {
-    /*padding: 20px 0;*/
     padding: 20px 0 20px 27px;
     font-family: "Muller", Arial, Verdana, sans-serif;
     font-size: 20px;
@@ -1377,7 +1327,6 @@ h1.logo {
 .soc-links-list li {
     display: block;
     width: 100%;
-    /*text-align: center;*/
     padding: 25px 0;
 }
 
@@ -1485,7 +1434,6 @@ h1.logo {
 
 .about-us-slider-box {
     position: relative;
-    /*top: -61px;*/
 }
 
 .shadow {
@@ -1534,30 +1482,7 @@ h1.logo {
     margin: 0 0 0 14%;
     overflow: hidden;
     position: relative;
-
-/*    -webkit-box-shadow:0px 0px 350px 30px rgba(255, 0, 0, .3);
-    -moz-box-shadow:0px 0px 350px 30px rgba(255, 0, 0, .3);
-    box-shadow:0px 0px 350px 30px rgba(255, 0, 0, .3);*/
-
 }
-
-/*.about-us-slider .slick-list {
-    position: relative;
-}*/
-
-/*.about-us-slider:before {
-    display: block;
-    content: "";
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    outline: 3px solid green;
-    -webkit-box-shadow: 0px 0px 130px 0px rgba(255, 0, 0, 0.9);
-    -moz-box-shadow:    0px 0px 130px 0px rgba(255, 0, 0, 0.9);
-    box-shadow:         0px 0px 130px 0px rgba(255, 0, 0, 0.9);
-}*/
 
 .about-us-slide {
     display: block;
@@ -1587,7 +1512,6 @@ h1.logo {
 
 .about-us-slider .slide-image {
     z-index: 2;
-    /*display: none;*/
 }
 
 .about-us-slider .slide-image_hover {
@@ -1601,7 +1525,6 @@ h1.logo {
     position: absolute;
     top: 0;
     left: 0;
-    /*background: rgba(0, 0, 0, 0);*/
     background: transparent;
     z-index: 2;
 }
@@ -1613,7 +1536,6 @@ h1.logo {
     bottom: 0;
     right: 0;
     width: 15%;
-    /*outline: 1px solid red;*/
 }
 
 .slick-arrow {
@@ -1781,13 +1703,11 @@ h1.logo {
 .for-paralaks {
     display: block;
     height: 0;
-    /*outline: 1px solid red;*/
     position: relative;
     top: -1px;
 }
 
 .article {
-    /*position: relative;*/
     padding: 105px 0;
     z-index: 10;
 }
@@ -1836,8 +1756,6 @@ h1.logo {
 
 .article.left-image h3 {
     padding-left: 0;
-    /*position: relative;
-    left: -7%;*/
 }
 
 .article.left-image .article-content {
@@ -1874,7 +1792,6 @@ h1.logo {
 
 .article.right-image .article-num {
     top: -44px;
-    /*left: -3%;*/
     left: -2%;
 }
 
@@ -1907,15 +1824,10 @@ h1.logo {
 .image_1-box {
     display: block;
     max-width: 1040px;
-    /*height: 1070px;*/
     top: -394px;
     right: -37%;
     position: absolute;
 }
-
-/*.image_1-box.rellax-position {
-    top: -95px;
-}*/
 
 .article-image_1 {
     display: block;
@@ -1932,10 +1844,6 @@ h1.logo {
     z-index: 3;
 }
 
-/*.image_2-box.rellax-position {
-    top: 276px;
-}*/
-
 .image_2-box img {
     display: block;
     width: 100%;
@@ -1951,10 +1859,6 @@ h1.logo {
     z-index: 2;
 }
 
-/*.image_3-box.rellax-position {
-    top: 149px;
-}*/
-
 .image_3-box img {
     display: block;
     width: 100%;
@@ -1969,10 +1873,6 @@ h1.logo {
     right: -9%;
 }
 
-/*.image_4-box.rellax-position {
-    top: 980px;
-}*/
-
 .image_4-box img {
     display: block;
     width: 100%;
@@ -1986,10 +1886,6 @@ h1.logo {
     top: 0;
     left: -24%;
 }
-
-/*.image_5-box.rellax-position {
-    top: 1100px;
-}*/
 
 .image_5-box img {
     display: block;
@@ -2173,18 +2069,6 @@ h1.logo {
     box-shadow:         0px 0px 80px 0px rgba(0, 0, 0, 0.4);
     overflow: hidden;
 }
-
-/*.map-box:before {
-    display: block;
-    content: "";
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background: rgba(280, 0, 0, .7);
-    z-index: 2;
-}*/
 
 #map {
     display: block;
